--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "heroku-postbuild": "ng build",
     "start": "node server.js",
     "start:dev": "nodemon server.js"
   },
